--- a/WPF.QuickStart.UI/Resources/ControlTemplates/BusyIndicator.xaml
+++ b/WPF.QuickStart.UI/Resources/ControlTemplates/BusyIndicator.xaml
@@ -21,7 +21,7 @@
                     <StackPanel Margin="4" Width="350" Height="140">
                         <StackPanel.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                                <GradientStop Color="{StaticResource ColorLightBlue}" Offset="0"/>
+                                <GradientStop Color="{DynamicResource AccentColor}" Offset="0"/>
                                 <GradientStop Color="#FFFFFF" Offset="1"/>
                             </LinearGradientBrush>
                         </StackPanel.Background>
