--- a/WPF.QuickStart.UI/Resources/Shared.xaml
+++ b/WPF.QuickStart.UI/Resources/Shared.xaml
@@ -18,9 +18,6 @@
     <Color x:Key="AquaBlueColor">#FFA3C3EC</Color>
     <Brush x:Key="AquaBlueBrush">#FFA3C3EC</Brush>
 
-    <SolidColorBrush x:Key="BrushLightBlue">#CC119EDA</SolidColorBrush>
-    <Color x:Key="ColorLightBlue">#CC119EDA</Color>
-
     <LinearGradientBrush x:Key="AquaBlueBrushGradient" EndPoint="0.5,1" StartPoint="0.5,0">
         <GradientStop Color="#FFA3C3EC" Offset="0.4"/>
         <GradientStop Color="#FFABCCF4" Offset="0.6"/>
@@ -50,8 +47,8 @@
         <Setter Property="MinHeight" Value="600" />
         <Setter Property="ResizeMode" Value="CanResizeWithGrip" />
         <Setter Property="WindowState" Value="Maximized" />
-        <Setter Property="Background" Value="FloralWhite" />
-        <Setter Property="Foreground" Value="#CC119EDA" />
+        <!--<Setter Property="Background" Value="FloralWhite" />
+        <Setter Property="Foreground" Value="#CC119EDA" />-->
         <Setter Property="Title" Value="MainWindow" />
     </Style>
 
@@ -108,7 +105,7 @@
 
     <Style x:Key="HeaderStyle" BasedOn="{StaticResource baseStyleTitleTextBlock}" TargetType="{x:Type TextBlock}">
         <Setter Property="FontSize" Value="30" />
-        <Setter Property="Foreground" Value="{DynamicResource BrushLightBlue}" />
+        <!--<Setter Property="Foreground" Value="{DynamicResource AccentBrush}" /> NOT WORKING WHEN UNCOMMENT AND GO TO TWITTER SCREEN -->
     </Style>
 
     <Style x:Key="noteHeaderStyle" BasedOn="{StaticResource baseStyleTitleTextBlock}" TargetType="{x:Type TextBlock}">
